bonus/confs/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dev
spec:
  selector:
    app: myapp
  ports:
  - port: 8888
    targetPort: 8888
  type: ClusterIP
